Grace/tests/gibbs/errors/t116.grace
// ERROR = P1004
method x {}
print x
